Use new wording for how attorneys make decisions

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -414,18 +414,17 @@
     "lastSaved": "Wedi achub diwethaf",
     "statusTag": "Welsh",
 
-    "howShouldAttorneysMakeDecisions": "Sut ydych chi am i'ch atwrneiod wneud penderfyniadau?",
-    "howShouldAttorneysMakeDecisionsDetail": "Mae eich dewis yma yn bwysig iawn gan ei fod yn effeithio ar sut y gellir defnyddio eich LPA. Pa bynnag opsiwn a ddewiswch, rhaid i'ch atwrneiod weithredu er eich lles gorau bob amser.",
-    "getHelpMakingDecision": "Cael help i wneud y penderfyniad hwn",
-    "jointlyAndSeverallyHumanised": "Gall {{.AllAttorneysFirstNames}} wneud penderfyniadau gyda'i gilydd neu’n unigol",
-    "jointlyAndSeverallyHint": "<p>Mae'r rhan fwyaf o bobl yn dewis yr opsiwn hwn gan mai hwn yw'r mwyaf ymarferol. Mae hefyd yn golygu y gall {{.AllAttorneysFirstNames}} rannu tasgau a chyfrifoldebau rhyngddynt.</p><p>Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ac yn unigol'.</p>",
-    "jointlyHumanised": "Rhaid i {{.AllAttorneysFirstNames}} gytuno a gwneud pob penderfyniad gyda'i gilydd",
-    "jointlyHintAttorneys": "<p>Mae hyn yn golygu bod yn rhaid i {{.AllAttorneysFirstNames}} wneud pob penderfyniad gyda'i gilydd, waeth pa mor fawr neu fach. Rhaid iddynt gytuno ar bob penderfyniad.</p><p>Dyma’r opsiwn lleiaf poblogaidd, oherwydd gall wneud yr LPA yn anodd ei ddefnyddio. Er enghraifft, os na all {{.AllAttorneysFirstNames}} gytuno ar benderfyniad, ni ellir ei wneud heb fynd i'r llys.</p><p>Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd'.</p>",
-    "jointlyAndSeverallyMixedHumanised": "Rhaid i {{.AllAttorneysFirstNames}} wneud rhai penderfyniadau gyda'i gilydd",
-    "jointlyAndSeverallyMixedHint": "<p>Rydych chi'n dewis rhai penderfyniadau y mae'n rhaid i {{.AllAttorneysFirstNames}} gytuno arnynt a gwneud gyda'u gilydd. Gallant wneud pob penderfyniad arall gyda'i gilydd neu yn unigol.</p><p>Os na allant gytuno ar benderfyniad rydych wedi dweud bod yn rhaid iddynt wneud gyda'i gilydd, bydd rhaid iddynt fynd i'r llys er mwyn i farnwr allu penderfynu.</p><p>Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ar gyfer rhai penderfyniadau, ac ar y cyd ac yn unigol i eraill'.</p>",
-    "decisionDetailsHint": "Dywedwch wrthym ba benderfyniadau yr hoffech iddynt gael eu gwneud ar y cyd. Edrychwch ar y canllawiau am enghreifftiau o sut y gallwch wneud eich dymuniadau'n glir.",
+    "howShouldAttorneysMakeDecisions": "Welsh",
+    "howShouldAttorneysMakeDecisionsDetail": "Welsh",
+    "jointlyAndSeverallyHumanised": "Welsh",
+    "jointlyAndSeverallyHint": "<p>Welsh</p><p>Welsh</p><p>Welsh</p><p>Welsh</p>",
+    "jointlyHumanised": "Welsh",
+    "jointlyHintAttorneys": "<p>Welsh</p><p>Welsh</p><p>Welsh</p>",
+    "jointlyAndSeverallyMixedHumanised": "Welsh",
+    "jointlyAndSeverallyMixedHint": "<p>Welsh</p><p>Welsh</p>",
+    "decisionDetailsHint": "Welsh <a class=\"govuk-link\" href=\"#\">Welsh</a> Welsh",
     "details": "Manylion",
-    "chooseADecisionType": "Dewiswch o'r opsiynau penderfyniad a restrir",
+    "chooseADecisionType": "Welsh",
     "provideDecisionDetails": "Rhowch fanylion am sut y dylai eich atwrneiod weithredu",
     "removeDetails": "Rhowch fanylion ar sut y dylai atwrneiod weithredu dim ond os ydynt yn dewis ar y cyd ar gyfer rhai penderfyniadau, ac ar y cyd ac yn unigol ar gyfer penderfyniadau eraill",
 
@@ -457,13 +456,13 @@
     "whenOneCanNoLongerAct": "Cyn gynted ag na all <span class=\"govuk-!-font-weight-bold\">un</span> o'r atwrneiod gwreiddiol weithredu mwyach, dylai'r holl atwrneiod wrth gefn gamu i mewn â'i gilydd",
     "whenNoneCanNoLongerAct": "Pan na all <span class=\"govuk-!-font-weight-bold\">yr un</span> o'r atwrneiod gwreiddiol weithredu, dylai'r holl atwrneiod wrth gefn gamu i mewn â'i gilydd",
     "otherWay": "Mewn rhyw ffordd arall",
-    "otherWayHint": "<p class=\"govuk--body\">Disgrifiwch isod sut yr hoffech i hyn ddigwydd. Byddwch yn ofalus - y mwyaf penodol yw'r cyfarwyddiadau, y mwyaf yw'r tebygolrwydd na fydd modd eu dilyn. Os oes gennych unrhyw amheuaeth, ceisiwch gyngor cyfreithiol. <a class=\"govuk-link\" href=\"#\">Ddim yn siŵr beth i'w roi?</a></p>",
+    "otherWayHint": "<p class=\"govuk-body\">Disgrifiwch isod sut yr hoffech i hyn ddigwydd. Byddwch yn ofalus - y mwyaf penodol yw'r cyfarwyddiadau, y mwyaf yw'r tebygolrwydd na fydd modd eu dilyn. Os oes gennych unrhyw amheuaeth, ceisiwch gyngor cyfreithiol. <a class=\"govuk-link\" href=\"#\">Ddim yn siŵr beth i'w roi?</a></p>",
     "selectWhenToStepIn": "Dewiswch pryd y dylai eich atwrneiod wrth gefn gamu i mewn",
     "provideDetailsOfWhenToStepIn": "Rhowch fanylion am sut y dylai eich atwrneiod wrth gefn gamu i mewn",
 
-    "jointly-and-severally": "<p class=\"govuk--body\">Gall eich atwrneiod wneud penderfyniadau gyda’i gilydd neu’n unigol.</p> <p class=\"govuk--body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ac yn unigol'.</p>",
-    "jointly": "<p class=\"govuk--body\">Rhaid i'ch atwrneiod gytuno a gwneud pob penderfyniad gyda'i gilydd.</p> <p class=\"govuk--body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd'.</p>",
-    "mixed": "<p class=\"govuk--body\">Rhaid i'ch atwrneiod wneud rhai penderfyniadau gyda'i gilydd.</p> <p class=\"govuk--body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ar gyfer rhai penderfyniadau ac ar y cyd ac yn unigol i eraill'.</p>",
+    "jointly-and-severally": "<p class=\"govuk-body\">Gall eich atwrneiod wneud penderfyniadau gyda’i gilydd neu’n unigol.</p> <p class=\"govuk-body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ac yn unigol'.</p>",
+    "jointly": "<p class=\"govuk-body\">Rhaid i'ch atwrneiod gytuno a gwneud pob penderfyniad gyda'i gilydd.</p> <p class=\"govuk-body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd'.</p>",
+    "mixed": "<p class=\"govuk-body\">Rhaid i'ch atwrneiod wneud rhai penderfyniadau gyda'i gilydd.</p> <p class=\"govuk-body\">Mewn termau cyfreithiol, gelwir hyn yn eich atwrneiod yn gweithio 'ar y cyd ar gyfer rhai penderfyniadau ac ar y cyd ac yn unigol i eraill'.</p>",
     "when-registered": "Cyn gynted ag y bydd wedi'i gofrestru",
     "when-capacity-lost": "Dim ond pan nad oes gennyf alluedd meddyliol",
 
