--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -384,18 +384,17 @@
     "lastSaved": "Last saved",
     "statusTag": "Status tag",
 
-    "howShouldAttorneysMakeDecisions": "How do you want your attorneys to make decisions?",
-    "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always act in your best interests.",
-    "getHelpMakingDecision": "Get help with making this decision",
-    "jointlyAndSeverallyHumanised": "{{.AllAttorneysFirstNames}} can make decisions together or on their own",
-    "jointlyAndSeverallyHint": "<p>Most people choose this option as it's the most practical. It also means {{.AllAttorneysFirstNames}} can share tasks and responsibilities between them.</p><p>In legal terms, this is known as your attorneys working 'jointly and severally'.</p>",
-    "jointlyHumanised": "{{.AllAttorneysFirstNames}} must agree and make all decisions together",
-    "jointlyHintAttorneys": "<p>This means {{.AllAttorneysFirstNames}} must make all decisions together, however big or small. They must both agree on every decision.</p><p>This is the least popular option, because it can make the LPA harder to use. For example, if {{.AllAttorneysFirstNames}} cannot agree on a decision, it cannot be made without going to court.</p><p>In legal terms, this is known as your attorneys working 'jointly'.</p>",
-    "jointlyAndSeverallyMixedHumanised": "{{.AllAttorneysFirstNames}} must make certain decisions together",
-    "jointlyAndSeverallyMixedHint": "<p>You choose certain decisions that {{.AllAttorneysFirstNames}} must agree on and make together. They can make all other decisions together or on their own.</p><p>If they cannot agree on a decision you've said they must may together, they will have to go to court so a judge can decide.</p><p>In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
-    "decisionDetailsHint": "Please tell us which decisions you want to be made jointly. Take a look at the guidance for examples of how you can make your wishes clear.",
+    "howShouldAttorneysMakeDecisions": "How should your attorneys make decisions?",
+    "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always make decisions in your best interests.",
+    "jointlyAndSeverallyHumanised": "Together and separately",
+    "jointlyAndSeverallyHint": "<p>Your attorneys can make decisions together or on their own.</p><p>This means your attorneys can share tasks and responsibilities. It also means that if one of your attorneys is unable to act, decisions can still be made without them.</p><p>Most people choose this option as it’s the most practical.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys acting 'jointly and severally'.</p>",
+    "jointlyHumanised": "Together",
+    "jointlyHintAttorneys": "<p>All your attorneys must agree on every decision, however big or small.</p><p>This means if one of your attorneys can no longer act, none of your other attorneys will be able to act either, unless you state otherwise in your restrictions. It also means that if your attorneys cannot agree on a decision, it cannot be made without going to court.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly'.</p>",
+    "jointlyAndSeverallyMixedHumanised": "Some decisions must be made together",
+    "jointlyAndSeverallyMixedHint": "<p>All your attorneys must agree on some decisions but can make other decisions on their own. You must state which decisions need to be agreed together.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
+    "decisionDetailsHint": "Please tell us which decisions your attorneys must make together. <a class=\"govuk-link\" href=\"#\">Take a look at the guidance for examples</a> if your attorneys will be making decisions together.",
     "details": "Details",
-    "chooseADecisionType": "Select from the listed decision options",
+    "chooseADecisionType": "Select how your attorneys should make decisions",
     "provideDecisionDetails": "Provide details on how your attorneys should act",
     "removeDetails": "Only provide details on how attorneys should act if selecting Jointly for some decisions, and jointly and severally for other decisions",
 
@@ -424,7 +423,7 @@
     "whenOneCanNoLongerAct": "As soon as <span class=\"govuk-!-font-weight-bold\">one</span> of the original attorneys can no longer act, all the replacement attorneys should step in together",
     "whenNoneCanNoLongerAct": "When <span class=\"govuk-!-font-weight-bold\">none</span> of the original attorneys can act, all the replacement attorneys should step in together",
     "otherWay": "In some other way",
-    "otherWayHint": "<p class=\"govuk--body\">Describe below how you would like this to happen. Be careful - the more specific the instructions, the greater the chance that they will not be able to be followed. If in doubt, seek legal advice. <a class=\"govuk-link\" href=\"#\">Not sure what to put?</a></p>",
+    "otherWayHint": "<p class=\"govuk-body\">Describe below how you would like this to happen. Be careful - the more specific the instructions, the greater the chance that they will not be able to be followed. If in doubt, seek legal advice. <a class=\"govuk-link\" href=\"#\">Not sure what to put?</a></p>",
     "selectWhenToStepIn": "Select when your replacement attorneys should step in",
     "provideDetailsOfWhenToStepIn": "Provide details on how your replacement attorneys should step in",
 
