--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -391,7 +391,7 @@
     "jointlyHumanised": "Together",
     "jointlyHintAttorneys": "<p>All your attorneys must agree on every decision, however big or small.</p><p>This means if one of your attorneys can no longer act, none of your other attorneys will be able to act either, unless you state otherwise in your restrictions. It also means that if your attorneys cannot agree on a decision, it cannot be made without going to court.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly'.</p>",
     "jointlyAndSeverallyMixedHumanised": "Some decisions must be made together",
-    "jointlyAndSeverallyMixedHint": "<p>All your attorneys must agree on some decisions but can make other decisions on their own. You must state which decisions need to be agreed together.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
+    "jointlyAndSeverallyMixedHint": "<p>All your attorneys must agree on some decisions but can make other decisions on their own. You must state which decisions need to be agreed together.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for other decisions'.</p>",
     "decisionDetailsHint": "Please tell us which decisions your attorneys must make together. <a class=\"govuk-link\" href=\"#\">Take a look at the guidance for examples</a> if your attorneys will be making decisions together.",
     "details": "Details",
     "chooseADecisionType": "Select how your attorneys should make decisions",
