add welsh translations for witnessing and ID flow

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -313,61 +313,60 @@
     "thankYouHeader": "Diolch am eich taliad.",
     "paymentConfirmationContent": "<p class=\"govuk-body\">Rydych wedi talu am eich LPA cyllid a materion personol.</p><p class=\"govuk-body\">Rydym wedi anfon e-bost atoch i gadarnhau ein bod wedi derbyn eich ffi cais LPA.</p><p class=\"govuk-body\">Os nad yw'r e-bost yn cyrraedd ymhen ychydig funudau, gwiriwch eich ffolder sbam.</p>",
 
-    "readYourLpa": "Darllenwch a llofnodwch eich LPA",
     "readAndCheckYourLpa": "Darllenwch a gwiriwch eich LPA yn ofalus cyn i chi ei llofnodi.",
-    "whatHappensIfIWantToMakeChanges": "Beth sy’n digwydd os ydw i am wneud newidiadau ar ôl i mi lofnodi?",
-    "whatHappensIfIWantToMakeChangesContent": "<p class=\"govuk-body\">Mae'n bosib newid eich LPA ar ôl i chi ei llofnodi a chael y sgwrs â'ch darparwr tystysgrif. Ond bydd angen i chi:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>lofnodi'r LPA eto</li> <li>cael sgwrs arall gyda'ch darparwr tystysgrif, i drafod yr LPA mwyaf diweddar.</li> </ul> <p class=\"govuk-body\">Unwaith bydd yr LPA wedi'i chofrestru, gallwch ddileu atwrnai, ond ni allwch wneud unrhyw newidiadau eraill.</p><p class=\"govuk-body\">Os ydych am wneud newidiadau eraill, gallwch ganslo'r LPA a gwneud un newydd.</p>",
+    "whatHappensIfIWantToMakeChanges": "Beth sy’n digwydd os hoffwn wneud newidiadau ar ôl i mi lofnodi?",
+    "whatHappensIfIWantToMakeChangesContent": "<p class=\"govuk-body\">Mae’n bosib newid eich LPA ar ôl i chi ei llofnodi a chael y sgwrs gyda’ch darparwr tystysgrif. Fodd bynnag, bydd angen i chi:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>llofnodwch yr LPA eto</li> <li>cael sgwrs arall gyda’ch darparwr tystysgrif, fel y gallwch siarad am y newidiadau i'ch LPA.</li> </ul> <p class=\"govuk-body\">Unwaith y bydd yr LPA wedi’i chofrestru, gallwch ddileu atwrnai, ond ni allwch wneud unrhyw newidiadau eraill.</p><p> Os ydych am wneud newidiadau eraill, gallwch ganslo'r LPA a gwneud un newydd. </p>",
     "iHaveReadAndCheckedThisLpa": "Rwyf wedi darllen a gwirio'r LPA hon",
-    "iConfirmIMadeThisLpaOfMyOwnFreeWill": "Rwy’n cadarnhau fy mod wedi gwneud yr LPA hon o fy ewyllys rydd fy hun",
+    "iConfirmIMadeThisLpaOfMyOwnFreeWill": "Rwy’n cadarnhau fy mod wedi gwneud yr LPA hon o’m hewyllys rydd fy hun",
     "typeSignatureCode": "Teipiwch eich cod llofnod i lofnodi",
     "iHaventReceivedSignatureCode": "Nid wyf wedi derbyn cod llofnod",
     "selectReadAndCheckedLpa": "Dewiswch eich bod wedi darllen a gwirio'r LPA hon",
     "selectConfirmMadeThisLpaOfOwnFreeWill": "Dewiswch eich bod wedi gwneud yr LPA hon o'ch ewyllys rydd eich hun",
     "enterSignatureCode": "Rhowch eich cod llofnod",
     "enterCorrectSignatureCode": "Rhowch y cod llofnod a gawsoch",
-    "continueToSigningPage": "Parhau i'r dudalen arwyddo",
+    "continueToSigningPage": "Parhau i’r dudalen arwyddo",
 
-    "witnessingAsCPHeader": "<h1 class=\"govuk-heading-xl\">Welsh</h1>",
-    "enterUniqueCodeLabel": "Welsh",
-    "enterUniqueCodeHint": "{{ .CpFirstName }}, welsh {{ .DonorFullName }} welsh.",
-    "cpNotReceivedCodeLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">{{ .CpFirstName }} welsh</a></p>",
+    "witnessingAsCPHeader": "<h1 class=\"govuk-heading-xl\">Tystio fel darparwr tystysgrif</h1>",
+    "enterUniqueCodeLabel": "Rhowch eich cod unigryw",
+    "enterUniqueCodeHint": "{{ .CpFirstName }}, teipiwch y cod rydym wedi anfon i chi, i brofi eich bod gyda {{ .DonorFullName }} a’ch bod wedi’u gweld yn llofnodi’r LPA.",
+    "cpNotReceivedCodeLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Nid yw {{ .CpFirstName }} wedi derbyn neges destun gyda'r cod</a></p>",
     "witnessCodeDoesNotMatch": "Mae'r cod a roesoch yn anghywir, gwiriwch ef a cheisiwch eto",
-    "witnessCodeExpired": "Welsh",
+    "witnessCodeExpired": "Mae'r cod a roesoch wedi dod i ben",
     "enterWitnessCode": "Rhowch y cod a anfonwyd gennym at y darparwr tystysgrif",
     "witnessCodeTooLong": "Mae'r cod a roesoch yn rhy hir",
     "witnessCodeTooShort": "Mae'r cod a roesoch yn rhy fyr",
 
-    "submittedLpaHeader": "<h1 class=\"govuk-panel__title\">Welsh</h1>",
-    "whatHappensNextSubHeader": "<h2 class=\"govuk-heading-m\">Welsh</h2>",
-    "nextStepsList": "<ol class=\"govuk-list govuk-list--number govuk-list--spaced\"><li>Welsh {{ .CpFirstNames }} welsh</li><li>Welsh {{ .AttorneysFullNames }} welsh</li><li>Welsh</li><li>Welsh</li><li>Welsh</li></ol>",
-    "weWillEmailYou": "<p class=\"govuk-body\">Welsh</p>",
-    "signIn4WeeksWarning": "{{ .CpFirstNames }} welsh {{ .AttorneysAndCpSigningDeadline }}. {{ .CpFirstNames }} welsh",
+    "submittedLpaHeader": "<h1 class=\"govuk-panel__title\">Rydych chi wedi cyflwyno'ch LPA</h1>",
+    "whatHappensNextSubHeader": "<h2 class=\"govuk-heading-m\">Beth sy'n digwydd nesaf</h2>",
+    "nextStepsList": "<ol class=\"govuk-list govuk-list--number govuk-list--spaced\"><li>Byddwn yn cysylltu â {{ .CpFirstNames }} ac yn gofyn iddynt gadarnhau pwy ydyn nhw. Mae hefyd angen iddynt lofnodi'r LPA i gadarnhau eu bod wedi ei drafod gyda chi. Rydym yn galw hyn yn 'darparu tystysgrif'.</li><li>Yna byddwn yn cysylltu â {{ .AttorneysFullNames }} ac yn gofyn iddynt lofnodi'r LPA fel eich atwrneiod.</li><li>Unwaith y bydd yr atwrneiod wedi llofnodi, bydd eich LPA yn cael ei ddanfon yn awtomatig atom ni i gael ei gwirio a’i chofrestru. Os byddwn yn dod o hyd i unrhyw broblemau gyda'r LPA, byddwn yn cysylltu â chi.</li><li>Mae’r gyfraith yn dweud bod yn rhaid i ni aros 4 wythnos cyn cofrestru’r LPA. Mae hyn rhag ofn bod unrhyw un am wrthwynebu cofrestriad yr LPA.</li><li>Byddwn yn cofrestru'r LPA.</li></ol>",
+    "weWillEmailYou": "<p class=\"govuk-body\">Byddwn yn eich e-bostio bob cam i roi'r wybodaeth ddiweddaraf i chi am gynnydd cofrestriad eich LPA. Gallwch hefyd olrhain y cynnydd trwy fewngofnodi i'r gwasanaeth hwn.</p>",
+    "signIn4WeeksWarning": "Rhaid i {{ .CpFirstNames }} a’ch atwrneiod lofnodi’r LPA erbyn {{ .AttorneysAndCpSigningDeadline }}. Os na fyddant yn llofnodi erbyn y dyddiad hwn, bydd yn rhaid i chi gwrdd â { { .CpFirstNames }} a llofnodi'ch LPA eto.",
 
-    "signYourLpa": "Lofnodwch eich LPA",
-    "signYourLpaHeader": "<h2 class=\"govuk-heading-m\">Welsh</h2>",
+    "signYourLpa": "Llofnodwch eich LPA",
+    "signYourLpaHeader": "<h2 class=\"govuk-heading-m\">Mae llofnodi’r LPA yn gam cyfreithiol pwysig a phwerus.</h2>",
     "wantAttorneysToBeAppointed": {
-        "one": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
-        "two": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
-        "few": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
-        "many": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
-        "other": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh."
+        "one": "Pan fyddwch chi'n gwneud hyn, rydych chi'n dweud yn swyddogol eich bod chi eisiau i {{ .AllAttorneysFullNames }} fod eich atwrneiod {{ .LpaType }}.",
+        "two": "Pan fyddwch chi'n gwneud hyn, rydych chi'n dweud yn swyddogol eich bod chi eisiau i {{ .AllAttorneysFullNames }} fod eich atwrneiod {{ .LpaType }}.",
+        "few": "Pan fyddwch chi'n gwneud hyn, rydych chi'n dweud yn swyddogol eich bod chi eisiau i {{ .AllAttorneysFullNames }} fod eich atwrneiod {{ .LpaType }}.",
+        "many": "Pan fyddwch chi'n gwneud hyn, rydych chi'n dweud yn swyddogol eich bod chi eisiau i {{ .AllAttorneysFullNames }} fod eich atwrneiod {{ .LpaType }}.",
+        "other": "Pan fyddwch chi'n gwneud hyn, rydych chi'n dweud yn swyddogol eich bod chi eisiau i {{ .AllAttorneysFullNames }} fod eich atwrneiod {{ .LpaType }}."
     },
-    "explainAttorneysPowersPfa": "<p class=\"govuk-body\">Welsh {{ .AllAttorneysFirstNames }} welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> </ul>",
-    "explainAttorneysPowersHw": "<p class=\"govuk-body\">Welsh {{ .AllAttorneysFirstNames }} welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> </ul>",
-    "attorneysCanActOnlyIfAskedWarning": "Welsh {{ .AllAttorneysFullNames }} welsh",
-    "attorneysMustFollowMCA": "<p class=\"govuk-body\">Welsh <a class=\"govuk-link\" href=\"https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf\">Welsh</a> </p>",
-    "formPanelContent": "<h2 class=\"govuk-heading-m govuk-!-margin-bottom-2\">Welsh</h2> <p class=\"govuk-body\">Welsh</p>",
-    "iConfirmThat": "Welsh {{ .DonorFullName }} welsh:",
-    "cpIsWitnessingMeSign": "{{ .CertificateProviderFullName }} Welsh",
-    "wantToApply": "Welsh",
-    "readMoreDigitalSignatures": "Welsh",
-    "readMoreDigitalSignaturesContent": "Welsh",
-    "submitSignature": "Welsh",
-    "selectBothBoxes": "Rhaid i chi dicio'r ddau flwch i lofnodi'ch LPA",
+    "explainAttorneysPowersPfa": "<p class=\"govuk-body\">Mae hyn yn golygu, unwaith y bydd yr LPA wedi’i chofrestru, bydd gan {{ .AllAttorneysFirstNames }} y pŵer cyfreithiol i:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>eich helpu i wneud penderfyniad am eich arian neu eiddo, neu wneud penderfyniad ar eich rhan os nad oes gennych y galluedd meddyliol i’w wneud eich hun</li> <li>delio â sefydliadau, fel banciau a chwmnïau cyfleustodau, ar eich rhan</li> </ul>",
+    "explainAttorneysPowersHw": "<p class=\"govuk-body\">Mae hyn yn golygu, unwaith y bydd yr LPA wedi’i chofrestru, bydd gan {{ .AllAttorneysFirstNames }} y pŵer cyfreithiol i:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>pŵer HW</li> <li>pŵer HW arall</li> </ul>",
+    "attorneysCanActOnlyIfAskedWarning": "Tra bod gennych alluedd meddyliol, gall {{ .AllAttorneysFirstNames }} dim ond wneud y pethau hyn os gofynnwch iddynt wneud.",
+    "attorneysMustFollowMCA": "<p class=\"govuk-body\">Rhaid iddynt ddilyn y cyfyngiadau a wnaethoch yn eich LPA a’r rheolau yn y <a class=\"govuk-link\" href=\"https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf\">Ddeddf Galluedd Meddyliol a’r cod ymarfer.</a> </p>",
+    "formPanelContent": "<h2 class=\"govuk-heading-m govuk-!-margin-bottom-2\">Llofnodwch eich LPA</h2> <p class=\"govuk-body\">Pan fyddwch yn ticio'r blychau hyn rydych yn llofnodi'ch LPA yn gyfreithiol.</p>",
+    "iConfirmThat": "Rwyf i, {{ .DonorFullName }}, yn cadarnhau:",
+    "cpIsWitnessingMeSign": "Fod {{ .CertificateProviderFullName }} yn fy nhystio i'n llofnodi'r LPA hon",
+    "wantToApply": "Fy mod am wneud cais i gofrestru'r LPA hon",
+    "readMoreDigitalSignatures": "Mae sut mae ticio'r blychau yn gweithredu fel eich llofnod cyfreithiol",
+    "readMoreDigitalSignaturesContent": "User-friendly content to increase confidence in digital signatures.",
+    "submitSignature": "Cyflwyno fy llofnod",
+    "selectBothBoxes": "Rhaid i chi ddewis y ddau flwch i lofnodi eich LPA",
 
-    "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Welsh</h1>",
-    "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">Welsh {{ .CpFullName }}welsh</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>Welsh {{ .CpFirstNames }} welsh</li> <li>{{ .CpFirstNames }} welsh</li> </ol>",
-    "witnessCodeTimeWarning": "Welsh {{ .CpFirstNames }} welsh",
+    "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Tystio eich llofnod</h1>",
+    "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">Nawr mae angen arnom i {{ .CpFullName }}, eich darparwr tystysgrif i gadarnhau eu bod gyda chi a'u bod wedi eich gweld yn llofnodi'ch LPA.</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>Pan fyddwch yn pwyso parhau, byddwn yn anfon neges destun at {{ .CpFirstNames }} yn cynnwys cod unigryw</li> <li>Bydd angen i {{ .CpFirstNames }} deipio'r cod hwn ar y sgrin nesaf</li> </ol>",
+    "witnessCodeTimeWarning": "Pan fydd {{ .CpFirstNames }} yn derbyn y cod unigryw hwn, bydd yn dod i ben ar ôl 30 munud. Defnyddiwch y cod o fewn yr amser hwn.",
 
     "selectYourIdentityOptions": "Dewiswch eich opsiynau i brofi pwy ydych",
     "pleaseSelectOneFormOfIdentity": "Welsh",
