--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -24,9 +24,9 @@
     "selectOneOrMoreOptions": "Select one or more options.",
     "answerLater": "Answer later",
     "willDoThisLater": "I will do this later",
-    "pfaLegalTerm": "finances and affairs",
+    "pfaLegalTerm": "property and affairs",
     "hwLegalTerm": "personal welfare",
-    "combinedLegalTerm": "finances and affairs and personal welfare",
+    "combinedLegalTerm": "property and affairs and personal welfare",
     "yes": "Yes",
     "no": "No",
     "confirm": "Confirm",
@@ -92,9 +92,9 @@
 
     "whichTypeOfLpaToMake": "Which type of LPA do you want to make?",
     "whichTypeOfLpaToMakeContent": "<p class=\"govuk-body\">There are 2 types of LPA. You can make an LPA that covers decisions about your:</p><ul class=\"govuk-list govuk-list--bullet\"><li>money, finances and any property you own</li><li>health care, medical treatment and personal welfare</li></ul><p class=\"govuk-body\">You can have one or both types of LPA.</p><p class=\"govuk-body\">They do not have to be made at the same time and you can reuse any information you enter to make other LPAs later.</p><p class=\"govuk-body\">You can choose different people to be your attorneys for each LPA.</p><p class=\"govuk-body\"><a class=\"govuk-link\" href=\"#\">Find out more about the 2 types of LPAs</a></p>",
-    "lpaTypePfa": "Finance and affairs",
+    "lpaTypePfa": "Property and affairs",
     "lpaTypePfaHumanised": "An LPA that covers decisions about my money, finances and property",
-    "lpaTypePfaHint": "In legal terms, this is called a 'finance and affairs' LPA. You may also hear it called a 'property and financial affairs' LPA",
+    "lpaTypePfaHint": "In legal terms, this is called a 'property and affairs' LPA. You may also hear it called a 'property and financial affairs' LPA",
     "lpaTypeHw": "Personal welfare",
     "lpaTypeHwHumanised": "An LPA that covers decisions about my health care, medical treatment and personal welfare",
     "lpaTypeHwHint": "In legal terms, this is called a 'personal welfare' LPA. You may also hear it called a 'health and welfare' LPA",
@@ -285,7 +285,7 @@
     "paymentReceivedHeader": "Payment received",
     "yourRefNumber": "Your reference number",
     "thankYouHeader": "Thank you for your payment.",
-    "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your finance and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
+    "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your property and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
 
     "readYourLpa": "Read and sign your LPA",
     "readAndCheckYourLpa": "Read and check your LPA carefully before you sign it.",
