rework lpa-decisions and people-named-on-lpa to toggle headers and actions based on Lpa state

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -508,5 +508,7 @@
     },
     "lpaSubmitted": "Welsh",
     "statutoryWaitingPeriod": "Welsh",
-    "lpaRegistered": "Welsh"
+    "lpaRegistered": "Welsh",
+    "trackLpaProgress": "Welsh",
+    "backToDashboard": "Welsh"
 }
