determine attorney-summary paths by AttorneyType

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -167,6 +167,7 @@
 
     "selectWantReplacementAttorneys": "Dewiswch a ydych am gael unrhyw atwrneiod wrth gefn",
     "replacementAttorneys": "Atwrneiod wrth gefn",
+    "replacementAttorney": "Welsh",
 
     "whenCanTheLpaBeUsed": "Pryd gall eich atwrneiod ddefnyddio eich LPA",
     "youCanDecideHeader": "<p class=\"govuk-body-l\">Gallwch benderfynu os gall eich atwrnai ddefnyddio’r LPA cyn gynted ag y bydd wedi’i chofrestru neu dim ond pe bai chi’n colli galluedd meddyliol.</p>",
