--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -24,9 +24,9 @@
     "selectOneOrMoreOptions": "Select one or more options.",
     "answerLater": "Answer later",
     "willDoThisLater": "I will do this later",
-    "pfaLegalTerm": "property and affairs",
+    "pfaLegalTerm": "finances and affairs",
     "hwLegalTerm": "personal welfare",
-    "combinedLegalTerm": "property and affairs and personal welfare",
+    "combinedLegalTerm": "finances and affairs and personal welfare",
     "yes": "Yes",
     "no": "No",
     "confirm": "Confirm",
@@ -92,9 +92,9 @@
 
     "whichTypeOfLpaToMake": "Which type of LPA do you want to make?",
     "whichTypeOfLpaToMakeContent": "<p class=\"govuk-body\">There are 2 types of LPA. You can make an LPA that covers decisions about your:</p><ul class=\"govuk-list govuk-list--bullet\"><li>money, finances and any property you own</li><li>health care, medical treatment and personal welfare</li></ul><p class=\"govuk-body\">You can have one or both types of LPA.</p><p class=\"govuk-body\">They do not have to be made at the same time and you can reuse any information you enter to make other LPAs later.</p><p class=\"govuk-body\">You can choose different people to be your attorneys for each LPA.</p><p class=\"govuk-body\"><a class=\"govuk-link\" href=\"#\">Find out more about the 2 types of LPAs</a></p>",
-    "lpaTypePfa": "Property and affairs",
+    "lpaTypePfa": "Finance and affairs",
     "lpaTypePfaHumanised": "An LPA that covers decisions about my money, finances and property",
-    "lpaTypePfaHint": "In legal terms, this is called a 'property and affairs' LPA. You may also hear it called a 'property and financial affairs' LPA",
+    "lpaTypePfaHint": "In legal terms, this is called a 'finance and affairs' LPA. You may also hear it called a 'property and financial affairs' LPA",
     "lpaTypeHw": "Personal welfare",
     "lpaTypeHwHumanised": "An LPA that covers decisions about my health care, medical treatment and personal welfare",
     "lpaTypeHwHint": "In legal terms, this is called a 'personal welfare' LPA. You may also hear it called a 'health and welfare' LPA",
@@ -285,7 +285,7 @@
     "paymentReceivedHeader": "Payment received",
     "yourRefNumber": "Your reference number",
     "thankYouHeader": "Thank you for your payment.",
-    "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your property and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
+    "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your finance and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
 
     "readYourLpa": "Read and sign your LPA",
     "readAndCheckYourLpa": "Read and check your LPA carefully before you sign it.",
@@ -316,7 +316,7 @@
     "cpIsWitnessingMeSign": "{{ .CertificateProviderFullName }} is witnessing me sign this LPA",
     "wantToApply": "I want to apply to register this LPA",
     "readMoreDigitalSignatures": "Read more about digital signatures",
-    "readMoreDigitalSignaturesContent": "<p class=\"govuk-body\">Electronic signatures are legally recognised in England and Wales. They make it easier for you to sign documents online.</p><p class=\"govuk-body\">By ticking both boxes and selecting 'Submit my signature', you are providing your legal signature. This is just as safe and legally-binding as signing your LPA by hand.</p>",
+    "readMoreDigitalSignaturesContent": "User-friendly content to increase confidence in digital signatures.",
     "submitSignature": "Submit my signature",
     "selectBothBoxes": "You must select both boxes to sign your LPA",
 
@@ -391,7 +391,7 @@
     "jointlyHumanised": "Together",
     "jointlyHintAttorneys": "<p>All your attorneys must agree on every decision, however big or small.</p><p>This means if one of your attorneys can no longer act, none of your other attorneys will be able to act either, unless you state otherwise in your restrictions. It also means that if your attorneys cannot agree on a decision, it cannot be made without going to court.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly'.</p>",
     "jointlyAndSeverallyMixedHumanised": "Some decisions must be made together",
-    "jointlyAndSeverallyMixedHint": "<p>All your attorneys must agree on some decisions but can make other decisions on their own. You must state which decisions need to be agreed together.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for other decisions'.</p>",
+    "jointlyAndSeverallyMixedHint": "<p>All your attorneys must agree on some decisions but can make other decisions on their own. You must state which decisions need to be agreed together.</p><p class=\"govuk-inset-text\">In legal terms, this is known as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
     "decisionDetailsHint": "Please tell us which decisions your attorneys must make together. <a class=\"govuk-link\" href=\"#\">Take a look at the guidance for examples</a> if your attorneys will be making decisions together.",
     "details": "Details",
     "chooseADecisionType": "Select how your attorneys should make decisions",
@@ -452,7 +452,7 @@
     "selectAddMorePeopleToNotify": "Select yes if you want to add another person to notify",
     "enterTheirFirstNames": "Enter their first names",
     "enterTheirLastName": "Enter their last name",
-    "enterTheirEmail": "Enter their email address",
+    "enterTheirEmail": "Enter their last name",
     "theirEmailIncorrectFormat": "Enter their email address in the correct format, like name@example.com",
     "removeAPersonToNotify": "Remove a person to notify",
 
